k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerberus-api
  labels:
    app: cerberus-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cerberus-api
  template:
    metadata:
      labels:
        app: cerberus-api
    spec:
      containers:
      - name: cerberus-api
        image: IMAGE_PLACEHOLDER
        ports:
        - containerPort: 3000
