k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus-service
spec:
  selector:
    app: cerberus-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
